apps/arcs/delta/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-delta
  labels:
    sage.arc: "true"
    arc.name: "delta"
